<resources>

    // URLS
    <string name="register_account_url">https://megaphone-backend.herokuapp.com/register</string>
    <string name="check_email_availability_url">https://megaphone-backend.herokuapp.com/register/checkAvailability</string>
    <string name="check_credentials_url">https://megaphone-backend.herokuapp.com/login</string>

    // General text
    <string name="app_name">Megaphone</string>
    <string name="welcome_message_text">Welcome to Megaphone</string>

    // LoginActivity Strings
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="forgot_password_hyperlink_text">Forgot your password?</string>
    <string name="login_button_text">Sign in</string>
    <string name="register_user_button_text">Register</string>

    // RegisterActivity Strings
    <string name="password_text_view_hint">Password</string>
    <string name="email_text_view_hint">Email</string>
    <string name="confirm_password_text_view_hint">Confirm Password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="invalid_info_register_error_message">Please make sure all fields are filled in.</string>

    <!-- Create Group Strings -->
    <string name="enter_group_name">Enter group name</string>
    <string name="size25">25 m</string>
    <string name="size50">50 m</string>
    <string name="size75">75 m</string>

    <!-- Username Strings -->
    <string name="change_username_title">Change Username</string>
    <string name="new_username_hint">New Username</string>
    <string name="change_username_message">Please select your new username.</string>
    <string name="default_username_alert_title">Change your username</string>
    <string name="default_username_alert_message">It looks like you haven\'t set your username. You can choose your username
                                                   with the Change Username option at the top of your screen.</string>

    <!-- Share Content Strings -->
    <string name="share_content_alert_title">Share your group with friends</string>
    <string name="share_content_alert_message">Enter the phone number you\'d like to share with.</string>
    <string name="share_content_text_message_content_1">" would like you to chat with them on Megaphone! Join their group.</string>

    <!-- Action Strings -->
    <string name="action_logout">Logout</string>
    <string name="action_change_username">Change Username</string>
    <string name="action_share">Share This Chat</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_change_username">Change Username</string>
</resources>
